deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-specific-sizing
  namespace: node-specific-sizing
  labels:
    app: node-specific-sizing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-specific-sizing
  template:
    metadata:
      labels:
        app: node-specific-sizing
    spec:
      serviceAccountName: node-specific-sizing
      terminationGracePeriodSeconds: 10
      containers:
        - name: node-specific-sizing
          image: ghcr.io/manomanotech/kubernetes-node-specific-sizing:sha-28e2a98
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: node-specific-sizing-serving-cert
              readOnly: true
          securityContext:
            runAsNonRoot: true
      volumes:
        - name: node-specific-sizing-serving-cert
          secret:
            defaultMode: 420
            secretName: node-specific-sizing-serving-cert
